--- a/css/layout.css
+++ b/css/layout.css
@@ -80,3 +80,16 @@ color: white;
   .col-5{ width: 100%;    }
   .col-6{ width: 100%;    }
 }
+
+.flex-container {
+  display: flex;
+}
+
+header > div {
+  justify-content: space-between;
+  align-items: center;
+}
+
+#header-title h1, #header-title h4 {
+  margin: 0;
+}
