--- a/css/layout.css
+++ b/css/layout.css
@@ -70,6 +70,10 @@ color: white;
   }
   .col-6{ width: 100%;    }
 
+  .ingredients .col-3 {
+    padding: 0 12px;
+  }
+
 }
 
 @media all and (max-width:650px){
