Refactored and styled input and label elements

--- a/css/modules.css
+++ b/css/modules.css
@@ -46,3 +46,8 @@ main h2 {
 .ingredients li {
   line-height: 24px;
 }
+
+input[type=checkbox]:checked + label {
+  color: #ccc;
+  text-decoration: line-through;
+} 
