--- a/css/modules.css
+++ b/css/modules.css
@@ -36,6 +36,8 @@ main h2 {
 
 .ingredients {
   background-image: url("../assets/list-bg2.png");
+  margin: 0 12px 36px;
+  box-shadow: 0 5px 5px #ccc;
 }
 
 .ingredients ul {
@@ -51,3 +53,16 @@ input[type=checkbox]:checked + label {
   color: #ccc;
   text-decoration: line-through;
 } 
+
+#share {
+  width: 100%;
+  background: hsl(22, 84%, 55%);
+  color: white;
+  font-size: 16px;
+  padding: 12px;
+  text-transform: uppercase;
+}
+
+#share:hover {
+  background: hsl(22, 84%, 50%)
+}
