--- a/css/layout.css
+++ b/css/layout.css
@@ -49,11 +49,11 @@
 
 /*-- some extra column content styling --*/
 [class*='col-'] > p {
-background-color: #FFC2C2; 
+/* background-color: #FFC2C2;  */
 padding: 0;
 margin: 0;
 text-align: center; 
-color: white; 
+/* color: white;  */
 }
 
 @media all and (max-width:800px){
