--- a/css/modules.css
+++ b/css/modules.css
@@ -66,3 +66,13 @@ input[type=checkbox]:checked + label {
 #share:hover {
   background: hsl(22, 84%, 50%)
 }
+
+footer {
+  text-align: center;
+}
+
+footer p {
+  color: #999;
+  font-size: 12px;
+  margin: 18px !important;
+}
