--- a/css/modules.css
+++ b/css/modules.css
@@ -2,20 +2,23 @@ body {
   font-family: 'Lora', serif;
 }
 
-#header-title {
-  margin-left: 12px;
-}
+/* Header section */
 
 #header-title h1 {
   font-family: 'Dancing Script', cursive;
   font-size: 2em;
-  /* letter-spacing: 0.05em; */
 }
 
 #header-title h4 {
   font-size: 0.6em;
   text-transform: uppercase;
   color: #666;
+}
+
+hr {
+  background: url("https://mlhaus.github.io/cr-301d5/class-00/lab-c/lab/img/hr.png") no-repeat center;
+  height: 13px;
+  border: 0;
 }
 
 main h2 {
@@ -36,13 +39,7 @@ main h2 {
 
 .ingredients {
   background-image: url("../assets/list-bg2.png");
-  margin: 0 12px 36px;
   box-shadow: 0 5px 5px #ccc;
-}
-
-.ingredients ul {
-  margin: 0;
-  list-style: none;
 }
 
 .ingredients li {
@@ -54,12 +51,14 @@ input[type=checkbox]:checked + label {
   text-decoration: line-through;
 } 
 
+#author-img {
+  min-width: 78px;
+}
+
 #share {
-  width: 100%;
   background: hsl(22, 84%, 55%);
   color: white;
   font-size: 16px;
-  padding: 12px;
   text-transform: uppercase;
 }
 
@@ -71,8 +70,16 @@ footer {
   text-align: center;
 }
 
+#author-text h6 {
+  font-size: 16px;
+}
+
+#author-text p {
+  color: #666;
+  font-size: 14px;
+}
+
 footer p {
   color: #999;
   font-size: 12px;
-  margin: 18px !important;
 }
